Footer now resizes for mobile. Fixed dissappearing Resume nav option on mobile

--- a/css/Main.css
+++ b/css/Main.css
@@ -311,8 +311,3 @@ body {
 } */
 
 /* Media Queries */
-@media (max-width: 550px) {
-    #top-client-div > div:nth-child(1) {
-        display: none;
-    }
-}
